RegistrationDto Exception and MapperHelper are created, AuthenticationException and DuplicationEntityException are created too. Method for create, update, getByUsername, getByFirstName, getByEmail are created too