@@ -51,9 +51,47 @@ public class UserRepositoryImpl implements UserRepository {
                 throw new EntityNotFoundException("User", "username", username);
             }
 
-            return result.get(0);
+            return result.getFirst();
         }
     }
+
+    public User getByEmail(String email){
+        try (Session session = sessionFactory.openSession()) {
+            Query<User> query = session.createQuery("from User where email = :email", User.class);
+            query.setParameter("email", email);
+
+            List<User> result = query.list();
+            if (result.isEmpty()) {
+                throw new EntityNotFoundException("User", "email", email);
+            }
+
+            return result.getFirst();
+        }
+    }
+
+    public User getByFirstName(String firstName){
+        try (Session session = sessionFactory.openSession()) {
+            Query<User> query = session.createQuery("from User where firstName = :firstName", User.class);
+            query.setParameter("firstName", firstName);
+
+            List<User> result = query.list();
+            if (result.isEmpty()) {
+                throw new EntityNotFoundException("User", "firstName", firstName);
+            }
+
+            return result.getFirst();
+        }
+    }
+
+    @Override
+    public void createUser(User user) {
+        try (Session session = sessionFactory.openSession()) {
+            session.beginTransaction();
+            session.persist(user);
+            session.getTransaction().commit();
+        }
+    }
+
 
     @Override
     public void update(User user) {
